# KFChess

./: .gitignore  CMakeLists.txt
include/: board.hpp  game_engine.hpp  parser.hpp  pieces.hpp
src/: board.cpp  game_engine.cpp  main.cpp  parser.cpp  pieces.cpp
tests/: Pieces.cpp  Pieces_tests.cpp  board_tests.cpp  game_engine_tests.cpp  parser_tests.cpp
